Apply latest updates

--- a/www/home.html
+++ b/www/home.html
@@ -1720,7 +1720,7 @@ height: 30px;
       <input type="text" placeholder="Search here">
 
     
-
+<!-- 
        <a class="deleted" href="" style="padding-right: 8px;">
       
 
@@ -1734,7 +1734,7 @@ height: 30px;
       <rect width="24" height="24" fill="white"/>
     </clipPath>
   </defs>
-</svg> </a>
+</svg> </a> -->
 
   
 
