feat: Add i18n support with JSON and data-attributes

--- a/www/otp.html
+++ b/www/otp.html
@@ -15,12 +15,15 @@
         <!-- Alert -->
         <!-- 🚨 باکس هشدار OTP -->
         <div class="otp-alert" id="otpAlert">
-            <svg style="margin-top: 3.50%;" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                viewBox="0 0 24 24" fill="none">
-                <path
-                    d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z"
-                    stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+            
+
+             <svg  xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <g opacity="0.4">
+    <path d="M11.7344 7.94592V12.1567" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M11.7297 15.9406H11.7387" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  </g>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C17.5222 2 22 6.47676 22 12C22 17.5222 17.5222 22 12 22C6.47676 22 2 17.5222 2 12C2 6.47676 6.47676 2 12 2Z" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
             <div class="otp-alert-content">
                 <div class="otp-alert-title">Wrong code?</div>
                 <div class="otp-alert-message">Please double check and try again</div>
@@ -28,12 +31,10 @@
         </div>
 
         <div class="otp-alert success" id="otpAlertSuccess">
-            <svg style="margin-top: 3.50%;" xmlns="http://www.w3.org/2000/svg" width="20" height="20"
-                viewBox="0 0 20 20" fill="none">
-                <path
-                    d="M9.9732 1C11.2857 5.31246 14.6605 8.6874 18.9728 10C14.6605 11.3126 11.2857 14.6875 9.9732 19C8.6607 14.6875 5.28588 11.3126 0.973633 10C5.28588 8.6874 8.6607 5.31246 9.9732 1Z"
-                    stroke="#44CD54" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path opacity="0.4" d="M7.78615 21.1365C11.4884 22.8545 16.0155 22.1919 19.0712 19.1257C22.9725 15.2113 22.98 8.85771 19.0712 4.93577C15.1701 1.02141 8.83142 1.02141 4.92918 4.93577C1.87441 8.00196 1.21286 12.5443 2.92618 16.2591C3.14561 16.8079 3.3164 17.2504 3.3164 17.6789C3.3164 18.8762 2.16519 20.3589 2.93267 21.129C3.70014 21.8991 5.17888 20.744 6.36577 20.7374C6.79167 20.7374 7.23918 20.9153 7.78615 21.1365Z" stroke="#44CD54" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M8.37354 12.099L10.7592 14.4926L15.5294 9.7063" stroke="#44CD54" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
             <div class="otp-alert-content">
                 <div class="sss">New OTP sent.</div>
             </div>
@@ -61,11 +62,10 @@ gap: 10px;">
         <!-- Phone Info -->
         <div class="phone-info">
             <div class="phone-icon">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                    <path
-                        d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z"
-                        stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-                </svg>
+              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M19.1686 17.9794L19.1675 6.01946C19.1675 3.8 17.3675 2 15.1481 2H9.01947C6.8 2 5 3.8 5 6.02054L5.00109 17.9806C5.00109 20.2 6.80109 22 9.02054 22H15.1481C17.3686 22 19.1686 20.2 19.1686 17.9794Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.0846 17.9229V17.8694M12.0846 17.5881C11.9311 17.5881 11.8066 17.7126 11.8066 17.8657C11.8066 18.0192 11.9311 18.1437 12.0846 18.1437C12.2383 18.1437 12.3628 18.0192 12.3628 17.8657C12.3628 17.7126 12.2383 17.5881 12.0846 17.5881Z" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
             </div>
             <span class="phone-number" id="phoneDisplay">0777 151 6178</span>
             <a href="./signup.html" class="change-number">Not your number?</a>
