--- a/www/signup.html
+++ b/www/signup.html
@@ -35,12 +35,13 @@ gap: 10px;">
         <!-- 🚨 باکس خطا (مخفی به صورت پیش‌فرض) -->
        <!-- 🚨 باکس خطا (مخفی به صورت پیش‌فرض) -->
 <div class="error-alert" id="errorAlert">
-    <svg style="margin-top: 3.50%;" xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-        viewBox="0 0 24 24" fill="none">
-        <path
-            d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z"
-            stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round" />
-    </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <g opacity="0.4">
+    <path d="M11.7344 7.94592V12.1567" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M11.7297 15.9406H11.7387" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  </g>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C17.5222 2 22 6.47676 22 12C22 17.5222 17.5222 22 12 22C6.47676 22 2 17.5222 2 12C2 6.47676 6.47676 2 12 2Z" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
     <div class="error-content">
         <div class="error-title" id="errorTitle">Wrong number?</div>
         <div class="error-message" id="errorMessage">Please double check and try again</div>
@@ -52,9 +53,9 @@ gap: 10px;">
         <!-- Header -->
         <div class="header-section">
             <h1 class="title">Hello!</h1>
-            <p class="description">5 I am happy to have you in Farra.Where you can make best memories. </p>
+            <p class="description">5 I am happy to have you in Farra. <br> Where you can make best memories. </p>
             <p class="description">
-                You must make an account here, then Enter your phone number to proceed.
+                You must make an account here, <br> then Enter your phone number to proceed.
             </p>
         </div>
 
