--- a/www/start.html
+++ b/www/start.html
@@ -15,8 +15,8 @@
     <div class="particle"></div>
     <div class="particle"></div>
     <div class="particle"></div>
-
-    <div class="container">
+<div class="orginal">
+<div class="container">
         <!-- Custom blob-shaped image -->
 
         <img src="./img/7.png" alt="Ahmad Village" width="100%" height="100%" class="">
@@ -36,6 +36,9 @@
         
         <a href="signin.html" style="font-size: 20px; text-decoration: none;" class="btn btn-secondary">Signin</a>
     </div>
+
+</div>
+    
 </body>
 <script>
     // ========================================
