--- a/www/Booking-error.html
+++ b/www/Booking-error.html
@@ -20,7 +20,8 @@
 
   body {
     font-family: "Bonyade Koodak VF";
-    background: #f5f5fb;
+background: var(--Surface-Page, #EFEFFE);
+
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -299,12 +300,12 @@ background: var(--Primary-100, #E2E2FC);
     margin: 14px 0;
   }
 
-  .row {
-    display: flex;
-    align-items: flex-start;
-    gap: 6px;
-    margin: 5px 0;
-  }
+ .row {
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin: 5px 0;
+}
 
 .value {
   display: flex;              /* قرار گرفتن کنار هم */
@@ -348,7 +349,7 @@ font-size: var(--Font-Copy-Body-Text-Size, 16px);
 font-style: normal;
 font-weight: 400;
 line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
-    margin-left: 25px;
+    margin-left: 31px;
   }
 
  
@@ -438,7 +439,9 @@ line-height: var(--Font-Copy-Body-Lg-Line-Heigth, 24px); /* 120% */
       <div class="hero-icons">
         <div class="hero-icon-btn">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-  <path d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 18.8571C2 18.3838 2.38376 18 2.85714 18H21.1429C21.6162 18 22 18.3838 22 18.8571C22 19.3305 21.6162 19.7143 21.1429 19.7143H2.85714C2.38376 19.7143 2 19.3305 2 18.8571Z" fill="#706DF2"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 4.85714C2 4.38376 2.38376 4 2.85714 4H21.1429C21.6162 4 22 4.38376 22 4.85714C22 5.33053 21.6162 5.71429 21.1429 5.71429H2.85714C2.38376 5.71429 2 5.33053 2 4.85714Z" fill="#706DF2"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 11.8571C2 11.3838 2.38376 11 2.85714 11H21.1429C21.6162 11 22 11.3838 22 11.8571C22 12.3305 21.6162 12.7143 21.1429 12.7143H2.85714C2.38376 12.7143 2 12.3305 2 11.8571Z" fill="#706DF2"/>
 </svg>
         </div>
       </div>
@@ -452,7 +455,9 @@ line-height: var(--Font-Copy-Body-Lg-Line-Heigth, 24px); /* 120% */
       <div class="hero-icons">
         <div class="hero-icon-btn">
          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-  <path d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M12 22C17.5232 22 22 17.5221 22 12C22 6.47676 17.5232 2 12 2C6.47676 2 2 6.47676 2 12C2 17.5221 6.47676 22 12 22Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M16.482 11.9997C16.482 14.4754 14.4744 16.4819 11.9988 16.4819C9.52309 16.4819 7.5166 14.4754 7.5166 11.9997C7.5166 9.52406 9.52309 7.51758 11.9988 7.51758C14.4744 7.51758 16.482 9.52406 16.482 11.9997Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.10433 18.8964L8.55297 15.4477M18.8972 18.8964L15.4485 15.4477M8.55192 8.55108L5.10327 5.10352M15.4485 8.55108L18.8972 5.10352" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
         </div>
       </div>
@@ -485,22 +490,31 @@ line-height: var(--Font-Copy-Body-Lg-Line-Heigth, 24px); /* 120% */
 
 
     <div class="row">
-<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M3 12.7256C3 5.76954 5.319 3.45154 12.274 3.45154C19.23 3.45154 21.549 5.76954 21.549 12.7256C21.549 19.6816 19.23 21.9996 12.274 21.9996C5.319 21.9996 3 19.6816 3 12.7256Z" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M3.27539 9.27395H21.2833" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M16.6787 13.211H16.6877" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.2794 13.211H12.2884" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M7.87158 13.211H7.88058" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M16.6787 17.0629H16.6877" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.2794 17.0629H12.2884" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M7.87158 17.0629H7.88058" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M16.2832 2V5.262" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M8.2749 2V5.262" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>    <div class="label" style="margin-left: 0px;">Date</div>
       <div class="value" style="margin-left:15px;">Thursday 24/05/2025</div>
     </div>
     <div class="row">
-      <div class="label" style="margin-left:25px;">Ref. Code</div>
+      <div class="label" style="margin-left:31px;">Ref. Code</div>
       <div class="value" style="margin-left:20px;">2560521456</div>
     </div>
     <div class="row">
-      <div class="label" style="margin-left:25px;">Bank</div>
+      <div class="label" style="margin-left:31px;">Bank</div>
       <div class="value">
           
-          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-</svg> sad
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M18.0595 12.0634L15.1078 9.79916L8.37366 4.66776H13.0007C14.6549 4.66776 16.0018 6.01455 16.0018 7.6687C16.0018 8.12154 15.9009 8.55091 15.7202 8.93571L17.8648 10.5805C18.3763 9.72877 18.6696 8.73393 18.6696 7.6687C18.6673 4.53637 16.1308 2 13.0007 2H4V4.63961L11.8041 10.6274L11.8557 10.6673L15.9454 13.8067C16.0041 13.8442 16.0604 13.8841 16.1167 13.924L16.173 13.9662C16.9145 14.5411 17.3791 15.4585 17.3322 16.4791C17.2571 18.0863 15.9009 19.3346 14.2912 19.3346H6.66784V13.3351H13.4606L9.98563 10.6673H4V22H14.3335C17.4636 22 20 19.4636 20 16.3336C20 14.6302 19.2468 13.1028 18.0572 12.0634" fill="#00A69C"/>
+</svg> Fib
         
     </div>
     </div>
@@ -508,8 +522,12 @@ line-height: var(--Font-Copy-Body-Lg-Line-Heigth, 24px); /* 120% */
     <div class="divider"></div>
 
     <div class="row">
-<svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M19.9673 15.735C19.9673 18.1728 18.4496 19.8939 16.0107 19.8939H5.95779C3.51782 19.8939 2 18.1728 2 15.735V9.15994C2 6.72213 3.51782 5 5.95779 5H15.029" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M14.1523 10.2871H2" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M6.3496 15.6122H9.31281" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M6.3496 15.6122H9.31281" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M19.9664 5.66722V11.6045M19.9664 5.66722L17.9352 7.70827M19.9664 5.66722L22 7.70827" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>    <div class="label" style="margin-left: 0px;">Paid By</div>
       <div class="value">Muhammed Bagher</div>
     </div>
