--- a/www/hotel-pay.html
+++ b/www/hotel-pay.html
@@ -24,21 +24,19 @@
             --border-color: #D9D9F7;
         }
 
-        body {
-            font-family: "Bonyade Koodak VF";
-              background-color: #F1F0FF;
-
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
+       body {
+  font-family: "Bonyade Koodak VF";
+  background-color: #F1F0FF;
+  margin: 0;
+  padding: 0;
+  color: #1E1E2E;
+}
         
         .container {
             width: 100%;
             max-width: 400px; /* Assuming a mobile screen width */
             padding: 24px;
+            padding-top: 0px;
             box-sizing: border-box;
             min-height: 100vh;
             background-color: #F1F0FF; /* Simulate inner content white background */
@@ -47,13 +45,16 @@
 
        /* Header داخل Hero */
     .hero-header {
-            margin-top: 24px;
-
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+  position: sticky;
+  top: 0;
+  z-index: 100;
+      padding: 24px 24px 16px;
+background: var(--Surface-Page, #EFEFFE);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
 
     .hero-logo {
       font-weight: 700;
@@ -94,7 +95,7 @@ font-size: var(--Font-Headings-H4-Text-Size, 32px);
 font-style: normal;
 font-weight: 700;
 line-height: var(--Font-Headings-H4-Line-Heigth, 48px); /* 150% */
-            margin-top: 25px;
+            margin-top: 16px;
             margin-bottom: 5px;
         }
 
@@ -413,12 +414,13 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
     </style>
 </head>
 <body>
-    <div class="container">
-        <div class="hero-header">
+   <div class="hero-header">
       <div class="hero-icons">
         <div class="hero-icon-btn">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-  <path d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 18.8571C2 18.3838 2.38376 18 2.85714 18H21.1429C21.6162 18 22 18.3838 22 18.8571C22 19.3305 21.6162 19.7143 21.1429 19.7143H2.85714C2.38376 19.7143 2 19.3305 2 18.8571Z" fill="#706DF2"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 4.85714C2 4.38376 2.38376 4 2.85714 4H21.1429C21.6162 4 22 4.38376 22 4.85714C22 5.33053 21.6162 5.71429 21.1429 5.71429H2.85714C2.38376 5.71429 2 5.33053 2 4.85714Z" fill="#706DF2"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 11.8571C2 11.3838 2.38376 11 2.85714 11H21.1429C21.6162 11 22 11.3838 22 11.8571C22 12.3305 21.6162 12.7143 21.1429 12.7143H2.85714C2.38376 12.7143 2 12.3305 2 11.8571Z" fill="#706DF2"/>
 </svg>
         </div>
       </div>
@@ -432,11 +434,15 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
       <div class="hero-icons">
         <div class="hero-icon-btn">
          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-  <path d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M12 22C17.5232 22 22 17.5221 22 12C22 6.47676 17.5232 2 12 2C6.47676 2 2 6.47676 2 12C2 17.5221 6.47676 22 12 22Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M16.482 11.9992C16.482 14.4749 14.4744 16.4814 11.9988 16.4814C9.52309 16.4814 7.5166 14.4749 7.5166 11.9992C7.5166 9.52357 9.52309 7.51709 11.9988 7.51709C14.4744 7.51709 16.482 9.52357 16.482 11.9992Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.10457 18.8969L8.55322 15.4482M18.8974 18.8969L15.4488 15.4482M8.55216 8.55157L5.10352 5.104M15.4488 8.55157L18.8974 5.104" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
         </div>
       </div>
     </div>
+    <div class="container">
+       
 
         <h1>Booking</h1>
         <p class="description">Please fill out the required information field and then tap on continue.</p>
@@ -453,8 +459,10 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
         <div class="booking-info-box">
   <div class="row">
     <div class="left">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M7.71268 6.1582C10.3163 6.1582 12.4254 8.26838 12.4254 10.8709C12.4254 12.7944 11.2719 14.4457 9.62067 15.178V20.0918C9.62067 21.1464 8.76612 21.9998 7.71268 21.9998C6.65924 21.9998 5.80362 21.1464 5.80362 20.0918L5.80474 15.178C4.15457 14.4457 3 12.7944 3 10.8709C3 8.26838 5.1102 6.1582 7.71268 6.1582Z" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M11.2407 7.73836C11.4496 7.45833 11.7108 7.19828 12.0097 6.96937C12.4608 6.62823 12.9609 6.39823 13.4809 6.26821C13.791 6.19821 14.111 6.1582 14.431 6.1582C15.6612 6.1582 16.8713 6.71827 17.6614 7.76949L21.1017 12.3388C22.4318 14.1201 22.0818 16.6504 20.3016 17.9905C18.5215 19.3206 15.9912 18.9706 14.65 17.1904L11.7408 13.31" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M13.4801 6.27154V4.97142C13.4801 3.33126 12.1498 2 10.4997 2C8.85844 2 7.53833 3.33126 7.53833 4.97142V10.572" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
       <span>Rooms</span>
     </div>
@@ -473,8 +481,17 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
 
   <div class="row">
     <div class="left">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M3 12.7252C3 5.76917 5.319 3.45117 12.274 3.45117C19.23 3.45117 21.549 5.76917 21.549 12.7252C21.549 19.6812 19.23 21.9992 12.274 21.9992C5.319 21.9992 3 19.6812 3 12.7252Z" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M3.27539 9.27344H21.2833" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M16.6787 13.2109H16.6877" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.2793 13.2109H12.2883" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M7.87158 13.2109H7.88058" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M16.6787 17.0625H16.6877" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.2793 17.0625H12.2883" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M7.87158 17.0625H7.88058" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M16.2832 2V5.262" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M8.2749 2V5.262" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
       <span style="color: #5C5C66;">From</span>
     </div>
@@ -501,8 +518,13 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
 
   <div class="row">
     <div class="left">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0388 14.5645C8.71891 14.5645 5.8877 15.1072 5.8877 17.2789C5.8877 19.4517 8.70377 20.0128 12.0388 20.0128C15.3564 20.0128 18.1898 19.4691 18.1898 17.2973C18.1898 15.1266 15.3748 14.5645 12.0388 14.5645Z" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2859 7.24844C16.2859 9.59422 14.3844 11.4969 12.0374 11.4969C9.69154 11.4969 7.79004 9.59422 7.79004 7.24844C7.79004 4.90261 9.69154 3 12.0374 3C14.3844 3 16.2859 4.90261 16.2859 7.24844Z" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.12417 13.0234H5.11553C3.28211 13.3088 2 13.9758 2 15.3206C2 16.0146 2.34485 16.5292 2.93401 16.9022" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M18.876 13.0234H18.8846C20.7181 13.3088 22.0001 13.9758 22.0001 15.3206C22.0001 16.0146 21.6553 16.5292 21.0661 16.9022" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M18.5466 9.8133C19.9011 9.30632 20.6827 7.85126 20.3162 6.41781C20.0201 5.25895 19.0591 4.44709 17.9456 4.28711" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.45264 9.8133C4.09811 9.30632 3.31654 7.85126 3.683 6.41781C3.9792 5.25895 4.94023 4.44709 6.0537 4.28711" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
       <span style="color: #5C5C66;">For</span>
     </div>
@@ -521,8 +543,13 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
 
   <div class="row total">
     <div class="left">
-     <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="black" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M6.75793 20.7801L5.91358 21.1844C5.02598 21.6093 3.99892 20.9616 4 19.9779L4.01081 6.36014C4.01081 3.66816 5.50924 2 8.19582 2H16.3064C19.0005 2 20.4654 3.66816 20.4654 6.36014L20.4848 19.9746C20.4859 20.9595 19.4588 21.6082 18.5702 21.1822L17.7324 20.7812C17.2285 20.539 16.6458 20.5216 16.128 20.7335L13.7431 21.7066C12.782 22.098 11.7041 22.098 10.743 21.7055L8.36231 20.7335C7.84445 20.5216 7.26173 20.539 6.75793 20.7801Z" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <g opacity="0.4">
+    <path d="M14.0559 8.73242H11.4364C10.6579 8.73242 10.0266 9.3638 10.0266 10.1433C10.0266 10.9217 10.6579 11.5531 11.4364 11.5531H13.0483C13.8277 11.5531 14.4592 12.1844 14.4592 12.9639C14.4592 13.7423 13.8277 14.3736 13.0483 14.3736H10.4287" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M12.2422 14.375V15.5589" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M12.2422 7.54297V8.7376" stroke="#45454D" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  </g>
 </svg>
       <span style="color: #5C5C66; font-size: 20px;">Total Price</span>
     </div>
@@ -534,7 +561,7 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
         <div class="pay-using">
             <h2>Pay using</h2>
             <div class="payment-options">
-                <div class="payment-option">
+                <div class="payment-option" id="Visa">
                     <div class="diamond-svg">
                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
   <path d="M15.9993 1C18.1868 8.18743 23.8114 13.8123 30.9986 16C23.8114 18.1877 18.1868 23.8125 15.9993 31C13.8118 23.8125 8.18708 18.1877 1 16C8.18708 13.8123 13.8118 8.18743 15.9993 1Z" stroke="#706DF2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -542,7 +569,7 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
                     </div>
                     <span>Visa</span>
                 </div>
-                <div class="payment-option">
+                <div class="payment-option" id="Master">
                     <div class="diamond-svg">
                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 32 32" fill="none">
   <path d="M15.9993 1C18.1868 8.18743 23.8114 13.8123 30.9986 16C23.8114 18.1877 18.1868 23.8125 15.9993 31C13.8118 23.8125 8.18708 18.1877 1 16C8.18708 13.8123 13.8118 8.18743 15.9993 1Z" stroke="#706DF2" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
@@ -581,23 +608,26 @@ line-height: var(--Font-Copy-Body-Line-Heigth, 20px); /* 125% */
     </div>
 
    <script>
-    const fibOption = document.getElementById('fib');
+   const paymentOptions = document.querySelectorAll('.payment-option');
 const payButton = document.querySelector('.pay-button');
 
-// فعال کردن/غیرفعال کردن گزینه FIB
-fibOption.addEventListener('click', () => {
-  const isActive = fibOption.classList.contains('active');
-
-  if (!isActive) {
-    fibOption.classList.add('active');
-    payButton.classList.add('enabled');
-    payButton.disabled = false;
-  } else {
-    fibOption.classList.remove('active');
-    payButton.classList.remove('enabled');
-    payButton.disabled = true;
-  }
+paymentOptions.forEach(option => {
+  option.addEventListener('click', () => {
+    // اگر این گزینه قبلا فعال بود، غیرفعالش کن
+    if (option.classList.contains('active')) {
+      option.classList.remove('active');
+      payButton.classList.remove('enabled');
+      payButton.disabled = true;
+    } else {
+      // فعال کردن گزینه کلیک شده و غیرفعال کردن بقیه
+      paymentOptions.forEach(o => o.classList.remove('active'));
+      option.classList.add('active');
+      payButton.classList.add('enabled');
+      payButton.disabled = false;
+    }
+  });
 });
+
 
 // ✅ ذخیره و بازیابی وضعیت کلیک از localStorage
 let redirectToggle = localStorage.getItem('redirectToggle');
