--- a/www/hotel_booking_page.html
+++ b/www/hotel_booking_page.html
@@ -265,8 +265,7 @@ line-height: normal;  opacity: 1;
 .input-btn svg {
   stroke-width: 1.5px;
 stroke: var(--Textbox-Default-Icon, #A9A7F7);
-  width: 17.999px;
-height: 18px;
+
 padding-right: 10px;
 }
 
@@ -410,14 +409,18 @@ line-height: 20px; /* 100% */
 }
 
  /* Header داخل Hero */
-    .hero-header {
-      margin-top: 24px;
-
-      width: 100%;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
+     .hero-header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+      padding: 24px 24px 24px;
+background: var(--Surface-Page, #EFEFFE);
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 24px;
+  
+}
 
     .hero-logo {
       font-weight: 700;
@@ -635,24 +638,14 @@ height: 30px;
 </style>
 </head>
 <body>
-  <!-- ✅ نوتیفیکیشن ارور -->
-<div class="date-notification" id="dateAlert">
-  <div style="display:flex;align-items:flex-start;">
-    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-</svg>
-    <div>
-      <strong>Not available in this Date.</strong>
-      <p>Please change your dates, no room is available in your selected date.</p>
-    </div>
-  </div>
-</div>
-  <div class="container">
-     <div class="hero-header">
+
+   <div class="hero-header">
       <div class="hero-icons">
         <div class="hero-icon-btn">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-  <path d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 18.8571C2 18.3838 2.38376 18 2.85714 18H21.1429C21.6162 18 22 18.3838 22 18.8571C22 19.3305 21.6162 19.7143 21.1429 19.7143H2.85714C2.38376 19.7143 2 19.3305 2 18.8571Z" fill="#706DF2"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 4.85714C2 4.38376 2.38376 4 2.85714 4H21.1429C21.6162 4 22 4.38376 22 4.85714C22 5.33053 21.6162 5.71429 21.1429 5.71429H2.85714C2.38376 5.71429 2 5.33053 2 4.85714Z" fill="#706DF2"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M2 11.8571C2 11.3838 2.38376 11 2.85714 11H21.1429C21.6162 11 22 11.3838 22 11.8571C22 12.3305 21.6162 12.7143 21.1429 12.7143H2.85714C2.38376 12.7143 2 12.3305 2 11.8571Z" fill="#706DF2"/>
 </svg>
         </div>
       </div>
@@ -666,11 +659,27 @@ height: 30px;
       <div class="hero-icons">
         <div class="hero-icon-btn">
          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-  <path d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M12 22C17.5232 22 22 17.5221 22 12C22 6.47676 17.5232 2 12 2C6.47676 2 2 6.47676 2 12C2 17.5221 6.47676 22 12 22Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M16.482 11.9992C16.482 14.4749 14.4744 16.4814 11.9988 16.4814C9.52309 16.4814 7.5166 14.4749 7.5166 11.9992C7.5166 9.52357 9.52309 7.51709 11.9988 7.51709C14.4744 7.51709 16.482 9.52357 16.482 11.9992Z" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.10457 18.8969L8.55322 15.4482M18.8974 18.8969L15.4488 15.4482M8.55216 8.55157L5.10352 5.104M15.4488 8.55157L18.8974 5.104" stroke="#706DF2" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
         </div>
       </div>
     </div>
+  <!-- ✅ نوتیفیکیشن ارور -->
+<div class="date-notification" id="dateAlert">
+  <div style="display:flex;align-items:flex-start;">
+    <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
+    <div>
+      <strong>Not available in this Date.</strong>
+      <p>Please change your dates, no room is available in your selected date.</p>
+    </div>
+  </div>
+</div>
+  <div class="container">
+    
 
     <div class="title">Booking</div>
     <div class="subtitle">Please fill out the required information field and then tap on continue.</div>
@@ -688,19 +697,36 @@ height: 30px;
       <div class="section-title">Booking Schedule</div>
       <div class="input-row">
        <div class="input-btn" id="checkInBtn" tabindex="0">
-  <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M3 12.7257C3 5.76966 5.319 3.45166 12.274 3.45166C19.23 3.45166 21.549 5.76966 21.549 12.7257C21.549 19.6817 19.23 21.9997 12.274 21.9997C5.319 21.9997 3 19.6817 3 12.7257Z" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M3.27539 9.27393H21.2833" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M16.6787 13.2109H16.6877" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.2793 13.2109H12.2883" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M7.87158 13.2109H7.88058" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M16.6787 17.063H16.6877" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.2793 17.063H12.2883" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M7.87158 17.063H7.88058" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M16.2832 2V5.262" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M8.2749 2V5.262" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
   <span class="input-text">Check-in</span>
 </div>
 
 <div class="input-btn" id="checkOutBtn">
- <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-  <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+ <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M3 12.7257C3 5.76966 5.319 3.45166 12.274 3.45166C19.23 3.45166 21.549 5.76966 21.549 12.7257C21.549 19.6817 19.23 21.9997 12.274 21.9997C5.319 21.9997 3 19.6817 3 12.7257Z" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M3.27539 9.27393H21.2833" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M16.6787 13.2109H16.6877" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.2793 13.2109H12.2883" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M7.87158 13.2109H7.88058" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M16.6787 17.063H16.6877" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M12.2793 17.063H12.2883" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M7.87158 17.063H7.88058" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M16.2832 2V5.262" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M8.2749 2V5.262" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
 </svg>
   <span class="input-text">Check-out</span>
 </div>
-
       </div>
     </div>
 
@@ -724,16 +750,26 @@ height: 30px;
   <div class="section-title">Guests List</div>
   <div class="input-row">
     <div class="input-btn">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0388 14.5635C8.71891 14.5635 5.8877 15.1062 5.8877 17.2779C5.8877 19.4508 8.70377 20.0119 12.0388 20.0119C15.3564 20.0119 18.1898 19.4681 18.1898 17.2963C18.1898 15.1256 15.3748 14.5635 12.0388 14.5635Z" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2859 7.24844C16.2859 9.59422 14.3844 11.4969 12.0374 11.4969C9.69154 11.4969 7.79004 9.59422 7.79004 7.24844C7.79004 4.90261 9.69154 3 12.0374 3C14.3844 3 16.2859 4.90261 16.2859 7.24844Z" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.12417 13.0225H5.11553C3.28211 13.3079 2 13.9749 2 15.3196C2 16.0137 2.34485 16.5282 2.93401 16.9012" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M18.876 13.0225H18.8846C20.7181 13.3079 22.0001 13.9749 22.0001 15.3196C22.0001 16.0137 21.6553 16.5282 21.0661 16.9012" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M18.5464 9.81378C19.9008 9.30681 20.6825 7.85174 20.316 6.4183C20.0198 5.25944 19.0588 4.44758 17.9453 4.2876" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.45264 9.81378C4.09811 9.30681 3.31654 7.85174 3.683 6.4183C3.9792 5.25944 4.94023 4.44758 6.0537 4.2876" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
       <input type="number" placeholder="Adults" class="editable-input" min="0">
     </div>
 
     <div class="input-btn">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
+    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M12.0388 14.5635C8.71891 14.5635 5.8877 15.1062 5.8877 17.2779C5.8877 19.4508 8.70377 20.0119 12.0388 20.0119C15.3564 20.0119 18.1898 19.4681 18.1898 17.2963C18.1898 15.1256 15.3748 14.5635 12.0388 14.5635Z" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M16.2859 7.24844C16.2859 9.59422 14.3844 11.4969 12.0374 11.4969C9.69154 11.4969 7.79004 9.59422 7.79004 7.24844C7.79004 4.90261 9.69154 3 12.0374 3C14.3844 3 16.2859 4.90261 16.2859 7.24844Z" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.12417 13.0225H5.11553C3.28211 13.3079 2 13.9749 2 15.3196C2 16.0137 2.34485 16.5282 2.93401 16.9012" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M18.876 13.0225H18.8846C20.7181 13.3079 22.0001 13.9749 22.0001 15.3196C22.0001 16.0137 21.6553 16.5282 21.0661 16.9012" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M18.5464 9.81378C19.9008 9.30681 20.6825 7.85174 20.316 6.4183C20.0198 5.25944 19.0588 4.44758 17.9453 4.2876" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M5.45264 9.81378C4.09811 9.30681 3.31654 7.85174 3.683 6.4183C3.9792 5.25944 4.94023 4.44758 6.0537 4.2876" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
       <input type="number" placeholder="Children" class="editable-input" min="0">
     </div>
   </div>
@@ -743,16 +779,21 @@ height: 30px;
   <div class="section-title">Rooms</div>
   <div class="input-row">
     <div class="input-btn">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
+     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M7.71268 6.1582C10.3163 6.1582 12.4254 8.26838 12.4254 10.8709C12.4254 12.7944 11.2719 14.4457 9.62067 15.178V20.0918C9.62067 21.1464 8.76612 21.9998 7.71268 21.9998C6.65924 21.9998 5.80362 21.1464 5.80362 20.0918L5.80474 15.178C4.15457 14.4457 3 12.7944 3 10.8709C3 8.26838 5.1102 6.1582 7.71268 6.1582Z" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M11.2407 7.73836C11.4496 7.45833 11.7108 7.19828 12.0097 6.96937C12.4608 6.62823 12.9609 6.39823 13.4809 6.26821C13.791 6.19821 14.111 6.1582 14.431 6.1582C15.6612 6.1582 16.8713 6.71827 17.6614 7.76949L21.1017 12.3388C22.4318 14.1201 22.0818 16.6504 20.3016 17.9905C18.5215 19.3206 15.9912 18.9706 14.65 17.1904L11.7408 13.31" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M13.4798 6.27154V4.97142C13.4798 3.33126 12.1496 2 10.4994 2C8.8582 2 7.53809 3.33126 7.53809 4.97142V10.572" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
       <input type="number" placeholder="Rooms" class="editable-input" min="0">
     </div>
 
     <div class="input-btn">
-      <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
-        <path d="M9.74957 0.75C11.0621 5.06246 14.4369 8.4374 18.7492 9.75C14.4369 11.0626 11.0621 14.4375 9.74957 18.75C8.43707 14.4375 5.06225 11.0626 0.75 9.75C5.06225 8.4374 8.43707 5.06246 9.74957 0.75Z" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-      </svg>
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <path d="M2 14.602C2 13.8737 2 13.5094 2.1051 13.2175C2.28458 12.719 2.67705 12.3265 3.17558 12.1471C3.4675 12.042 3.83166 12.042 4.56 12.042H19.44C20.1683 12.042 20.5324 12.042 20.8243 12.1471C21.3229 12.3265 21.7153 12.719 21.8949 13.2175C22 13.5094 22 13.8737 22 14.602V16.1487C22 16.877 22 17.2411 21.8949 17.5331C21.7153 18.0315 21.3229 18.4241 20.8243 18.6035C20.5324 18.7086 20.1683 18.7086 19.44 18.7086H4.56C3.83166 18.7086 3.4675 18.7086 3.17558 18.6035C2.67705 18.4241 2.28458 18.0315 2.1051 17.5331C2 17.2411 2 16.877 2 16.1487V14.602Z" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M19.5402 20.4439V18.7085M4.46094 18.7085V20.4439" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path d="M19.5402 12.0423V6.56C19.5402 5.83166 19.5402 5.4675 19.4351 5.17558C19.2557 4.67705 18.8632 4.28458 18.3647 4.1051C18.0728 4 17.7086 4 16.9802 4H7.02093C6.2926 4 5.92844 4 5.63651 4.1051C5.13799 4.28458 4.74552 4.67705 4.56604 5.17558C4.46094 5.4675 4.46094 5.83166 4.46094 6.56V12.0423" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  <path opacity="0.4" d="M15.8891 12.0073V11.0043C15.8891 10.276 15.8891 9.91183 15.784 9.61991C15.6045 9.12139 15.212 8.72891 14.7135 8.54944C14.4216 8.44434 14.0575 8.44434 13.3291 8.44434H10.6714C9.94302 8.44434 9.5788 8.44434 9.28691 8.54944C8.78838 8.72891 8.3959 9.12139 8.21643 9.61991C8.11133 9.91183 8.11133 10.276 8.11133 11.0043V12.0073" stroke="#A9A7F7" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
       <input type="number" placeholder="Beds" class="editable-input" min="0">
     </div>
   </div>
