--- a/www/signin.html
+++ b/www/signin.html
@@ -29,9 +29,13 @@
 
         <!-- 🚨 باکس خطا -->
         <div class="error-alert" id="errorAlert">
-            <svg style="margin-top: 5.50%;" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-                <path d="M11.9732 3C13.2857 7.31246 16.6605 10.6874 20.9728 12C16.6605 13.3126 13.2857 16.6875 11.9732 21C10.6607 16.6875 7.28588 13.3126 2.97363 12C7.28588 10.6874 10.6607 7.31246 11.9732 3Z" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+  <g opacity="0.4">
+    <path d="M11.7344 7.94592V12.1567" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+    <path d="M11.7297 15.9406H11.7387" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+  </g>
+  <path fill-rule="evenodd" clip-rule="evenodd" d="M12 2C17.5222 2 22 6.47676 22 12C22 17.5222 17.5222 22 12 22C6.47676 22 2 17.5222 2 12C2 6.47676 6.47676 2 12 2Z" stroke="#FF595B" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+</svg>
             <div class="error-content">
                 <div class="error-title">I don't know you!</div>
                 <div class="error-message">The phone number is not registered. Please signup, or check the number.</div>
